refactor(file): 重构文件存储服务
- 重新组织包结构，提高代码可维护性
- 优化 FileHandler 类设计，改为 FileOptions 类
- 改进文件上传逻辑，支持不同存储平台
- 重构 MinioFileStorageImpl 类，使用 Minio 客户端工厂
- 优化 MultipartFileWrapper 类，处理文件读取异常